--- a/web/static/css/updateProduct.css
+++ b/web/static/css/updateProduct.css
@@ -59,6 +59,7 @@ aside {
 }
 .admin img{
     width: 150px;
+    margin-left: 20px;
 }
 .admin b{
     font-weight: bold;
@@ -147,7 +148,7 @@ td {
 
 /* Style input fields */
 input[type="text"] {
-    width: 90%;
+    width: 95%;
     padding: 7px;
     margin-bottom: 0px;
     border: 1px solid #ccc;
@@ -164,7 +165,11 @@ button[type="submit"] {
     margin: 10px;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 100px;
+    margin-left: -25px;
+}
+
+button:hover{
+    background-color: #33CC66;
 }
 
 /* Style the readonly input fields */
