--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -200,6 +200,9 @@ ol {
   Header
 -----------------------*/
 
+.header{
+    background: #D3FACD;
+}
 .header__top {
 	background: #f5f5f5;
 }
@@ -300,7 +303,6 @@ ol {
 .header__top__right__language img {
 	margin-right: 6px;
 }
-
 .header__top__right__language div {
 	font-size: 14px;
 	color: #1c1c1c;
@@ -349,7 +351,7 @@ ol {
 
 .header__top__right__auth a {
 	display: block;
-	font-size: 14px;
+	font-size: 20px;
 	color: #1c1c1c;
 }
 
@@ -373,6 +375,7 @@ ol {
 
 .header__menu {
 	padding: 24px 0;
+        
 }
 
 .header__menu ul li {
@@ -386,7 +389,7 @@ ol {
 	position: absolute;
 	left: 0;
 	top: 50px;
-	background: #222222;
+	background: #ffffff;
 	width: 180px;
 	z-index: 9;
 	padding: 5px 0;
@@ -405,18 +408,18 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: #000000;
 }
 
 .header__menu ul li .header__menu__dropdown li a {
 	text-transform: capitalize;
-	color: #ffffff;
+	color: #000000; 
 	font-weight: 400;
 	padding: 5px 15px;
 }
 
 .header__menu ul li.active a {
-	color: #7fad39;
+	color: #7FAD39;
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -524,21 +527,6 @@ ol {
 .hero.hero-normal {
 	padding-bottom: 30px;
 }
-
-.hero.hero-normal .hero__categories {
-	position: relative;
-}
-
-.hero.hero-normal .hero__categories ul {
-	display: none;
-	position: absolute;
-	left: 0;
-	top: 46px;
-	width: 100%;
-	z-index: 9;
-	background: #ffffff;
-}
-
 .hero.hero-normal .hero__search {
 	margin-bottom: 0;
 }
@@ -557,12 +545,12 @@ ol {
 }
 
 .hero__categories__all span {
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 700;
 	color: #ffffff;
 }
 
-.hero__categories__all:after {
+/*.hero__categories__all:after {
 	position: absolute;
 	right: 18px;
 	top: 9px;
@@ -570,7 +558,7 @@ ol {
 	font-family: "ElegantIcons";
 	font-size: 18px;
 	color: #ffffff;
-}
+}*/
 
 .hero__categories ul {
 	border: 1px solid #ebebeb;
@@ -1482,100 +1470,6 @@ ol {
 .filter__option span:hover {
 	color: #7fad39;
 }
-
-.product__item {
-	margin-bottom: 50px;
-}
-
-.product__item:hover .product__item__pic .product__item__pic__hover {
-	bottom: 20px;
-}
-
-.product__item__pic {
-	height: 270px;
-	position: relative;
-	overflow: hidden;
-}
-
-.product__item__pic__hover {
-	position: absolute;
-	left: 0;
-	bottom: -50px;
-	width: 100%;
-	text-align: center;
-	-webkit-transition: all, 0.5s;
-	-moz-transition: all, 0.5s;
-	-ms-transition: all, 0.5s;
-	-o-transition: all, 0.5s;
-	transition: all, 0.5s;
-}
-
-.product__item__pic__hover li {
-	list-style: none;
-	display: inline-block;
-	margin-right: 6px;
-}
-
-.product__item__pic__hover li:last-child {
-	margin-right: 0;
-}
-
-.product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
-}
-
-.product__item__pic__hover li:hover a i {
-	color: #ffffff;
-	transform: rotate(360deg);
-}
-
-.product__item__pic__hover li a {
-	font-size: 16px;
-	color: #1c1c1c;
-	height: 40px;
-	width: 40px;
-	line-height: 40px;
-	text-align: center;
-	border: 1px solid #ebebeb;
-	background: #ffffff;
-	display: block;
-	border-radius: 50%;
-	-webkit-transition: all, 0.5s;
-	-moz-transition: all, 0.5s;
-	-ms-transition: all, 0.5s;
-	-o-transition: all, 0.5s;
-	transition: all, 0.5s;
-}
-
-.product__item__pic__hover li a i {
-	position: relative;
-	transform: rotate(0);
-	-webkit-transition: all, 0.3s;
-	-moz-transition: all, 0.3s;
-	-ms-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
-}
-
-.product__item__text {
-	text-align: center;
-	padding-top: 15px;
-}
-
-.product__item__text h6 {
-	margin-bottom: 10px;
-}
-
-.product__item__text h6 a {
-	color: #252525;
-}
-
-.product__item__text h5 {
-	color: #252525;
-	font-weight: 700;
-}
-
 .product__pagination,
 .blog__pagination {
 	padding-top: 10px;
@@ -3459,12 +3353,10 @@ ol {
 	}
 }
 /* start footer */
-footer {
-    background-color: white;
-}
+
 
 .footer {
-    background-color: #fff;
+    background-color: #D3FACD;
     color: #333;
     /* Màu chữ */
     padding: 20px 0;
