--- a/web/static/css/profile.css
+++ b/web/static/css/profile.css
@@ -14,25 +14,21 @@ body {
     background-color: #f8f9fa;
     overflow-x: hidden;
 }
-.col-md-10{
-    padding: 50px;
-}
+
 /* Style the container */
 .main{
-      margin: 20px 350px;
-    width: 40%;
+    
     padding: 20px;
-    background-color: #f0f0f0;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
 
-
+.profile{
+    padding: 60px;
+}
 /* Style the table */
 .main table {
     width: 100%;
-    border-collapse: collapse;
+/*    border-collapse: collapse;*/
     margin-top: 10px;
 }
 
