--- a/web/static/css/register.css
+++ b/web/static/css/register.css
@@ -1,155 +1,493 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Sep 15, 2023, 11:54:55 PM
-    Author     : QUANG HUY
-*/
-body, html {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow-x: hidden;
+/*--A Design by W3layouts 
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+--*/
+
+/*--- reset code ---*/
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
+    margin:0;
+    padding:0;
+    border:0;
+    font-size:100%;
+    font:inherit;
+    vertical-align:baseline;
 }
-/* Header Styles */
-.header {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    padding: 10px;
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+ol,ul {
+    list-style:none;
+    margin:0px;
+    padding:0px;
+}
+blockquote,q {
+    quotes:none;
+}
+blockquote:before,blockquote:after,q:before,q:after {
+    content:'';
+    content:none;
+}
+table {
+    border-collapse:collapse;
+    border-spacing:0;
 }
 
-.header img {
-    margin-left: 50px;
-    width: 180px;
-    height: auto;
+/* start editing from here */
+a {
+    text-decoration:none;
+}
+.txt-rt {
+    text-align:right;
+}/* text align right */
+.txt-lt {
+    text-align:left;
+}/* text align left */
+.txt-center {
+    text-align:center;
+    /*-- W3Layouts --*/	
+}/* text align center */
+.float-rt {
+    float:right;
+}/* float right */
+.float-lt {
+    float:left;
+}/* float left */
+.clear {
+    clear:both;
+}/* clear float */
+.pos-relative {
+    position:relative;
+}/* Position Relative */
+.pos-absolute {
+    position:absolute;
+}/* Position Absolute */
+.vertical-base {	
+    vertical-align:baseline;
+}/* vertical align baseline */
+.vertical-top {	
+    vertical-align:top;
+}/* vertical align top */
+nav.vertical ul li {	
+    display:block;
+}/* vertical menu */
+nav.horizontal ul li {	
+    display: inline-block;
+}/* horizontal menu */
+img {
+    max-width:100%;
 }
 
-.header h2 {
-    margin-left: 20px;
-    font-size: 23px;
-    color: #333;
-} *
-.body {
-    background-color: #F7462E;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 700px;
+/*--- end reset code ---*/
+
+body {
+    background:url(../img/backgroundLogin.png) no-repeat;
+    background-attachment:fixed;
+    background-position:center;
+    background-size:cover;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    font-family: 'Raleway', sans-serif;
+    font-weight:300;
 }
-/* Các quy tắc kiểu cho trang đăng ký */
-.container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px 80px;
-    padding-left: 70px;
-    width: 300px;
-    margin-left: 200px;
+h1.w3ls {
+    font-size:50px;
+    color:#fff;
+    padding:30px 0;
+    text-align:center;
+    /*-- w3layouts --*/ 
+    text-transform:uppercase;
+    font-weight: bolder;
+}
+.content-w3ls {
+    background-color:#202123;
+    width:70%;
+    margin:0 auto 50px;
+    padding:0;
+}
+.content-w3ls .content-agile1 {
+    width: 50%;
+    float: left;
+    background: url(../img/bannerLogin.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    height: 710px;
+}
+h2.agileits1 {
+    font-size: 40px;
+    font-weight: normal;
+    color: #fff;
+    text-align: Center;
+    padding: 200px 0 15px;
+    text-transform: uppercase;
+    font-family: 'Monoton', cursive;
+}
+p.agileits2 {
+    font-size: 15px;
+    font-weight: normal;
+    color: #fff;
+    text-align: center;
+    text-transform: capitalize;
+}
+.content-w3ls .content-agile2 {	
+    width: 50%;
+    float: left;
+    padding: 60px 0;
+}
+input#UserID,input#email,input#password,input#password2 {
+    width:300px;
+    height:50px;
+    padding:0 15px;
+    color:#fff;
+    font-size:17px;
+    font-weight:200;
+    background-color:transparent;
+    /*-- w3layouts --*/ 
+    border-bottom:5px solid #fff;
+    border-top-color:transparent;
+    border-left-color:transparent;
+    border-right-color:transparent;
+    font-family: 'Raleway', sans-serif;
+    margin:0 auto 20px;
+    display:block;
+    outline:none;
+}
+input#UserID:focus,input#email:focus,input#password:focus,input#password2:focus,input#UserID:hover,input#email:hover,input#password:hover,input#password2:hover {
+    color:#fff;
+    border-bottom:5px solid #3970b0;
+}
+input::-webkit-input-placeholder {
+    color: #fff !important;
+} 
+input:-moz-placeholder { /* Firefox 18- */
+    color: #fff !important;  
+} 
+input::-moz-placeholder {  /* Firefox 19+ */
+    color: #fff !important;  
+} 
+input:-ms-input-placeholder {  
+    color: #fff !important;  
+}
+input:hover::-webkit-input-placeholder {
+    color: #3970b0 !important;
+} 
+input:hover:-moz-placeholder { /* Firefox 18- */
+    color:	#3970b0 !important;  
+} 
+input:hover::-moz-placeholder {  /* Firefox 19+ */
+    color: #3970b0 !important;  
+} 
+input:hover:-ms-input-placeholder {  
+    color: #3970b0 !important;  
+}
+button.register {
+    width: 335px;
+    margin: 40px auto 20px auto;
+    display: block;
+    height: 50px;
+    text-align: center;
+    font-size: 17px;
+    font-weight: normal;
+    color: #fff;
+    background-color:#3970b0;
+    border-color: transparent;
+    font-family: 'Raleway', sans-serif;
+    /*-- w3ls --*/
+    transition:all 0.5s ease-in-out;
+    -webkit-transition:all 0.5s ease-in-out;
+    -moz-transition:all 0.5s ease-in-out;
+    -o-transition:all 0.5s ease-in-out;
+    -ms-transition:all 0.5s ease-in-out;
+    cursor:pointer;
+}
+button.register:hover {
+    color: #fff;
+    background-color:#3970b0;
+}
+
+.error_message{
+    color: red;
+    margin-left: 120px;
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
+
+.noLogin{
+    color: white;
     text-align: center;
 }
 
-.container h1 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-/* Quy tắc kiểu cho các trường nhập liệu và thông báo lỗi */
-.container input {
-    width: 93%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    margin: 7px
-}
-
-.or{
-    font-size: 13px;
-    color: #C0C0C0;
-    padding: 10px;
-}
-
-.error_message {
+.noLogin a{
     color: red;
-    font-size: 13px;
-    margin-bottom: 5px;
-    font-weight: bold;
-    text-align: left;
-    margin-left: 10px; 
 }
 
-/* Quy tắc kiểu cho nút và liên kết */
-button[type="submit"]{
-    background-color: #F7462E;
-    color: #fff;
-    border: none;
-    padding: 10px 120px;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    width: 100%; /* Đặt chiều rộng của nút là 100% */
-    margin: 0px 8px
-    
-}
-
-button[type="submit"]:hover{
-    background-color: #E54646;
-}
-
-.btn-container a {
-    text-decoration: none;
-    color: #F7462E;
-    font-weight: bold;
-}
-
-.btn-container a:hover {
+.noLogin a:hover{
     text-decoration: underline;
 }
 
-.footer {
-    background-color: #fff;
-    color: #333;
-    padding: 20px 0;
+p.wthree {
+    font-size: 16px;
+    font-weight: normal;
+    color: #fff;
+    text-align: center;
+    text-transform: capitalize;
+    padding-bottom: 20px;
+}
+ul.social-agileinfo {
+    text-align: center;
+}
+ul.social-agileinfo li {
+    display:inline-block;
+    margin:0;
+}
+ul.social-agileinfo li a i.fa {
+    width:40px;
+    height:40px;
+    border:1px solid #fff;
+    text-align:center;
+    line-height:40px;
+    color:#fff;
+}
+ul.social-agileinfo li a i.fa.fa-facebook:hover {
+    background-color:#3b5998;
+    color:#fff;
+    border-color:#3b5998;
+}
+ul.social-agileinfo li a i.fa.fa-twitter:hover {
+    background-color:#1da1f2;
+    color:#fff;
+    border-color:#1da1f2;
+}
+ul.social-agileinfo li a i.fa.fa-youtube:hover {
+    background-color:#cd201f;
+    color:#fff;
+    border-color:#cd201f;
+}
+ul.social-agileinfo li a i.fa.fa-google-plus:hover {
+    /*-- w3ls --*/
+    background-color:#dd4b39;
+    color:#fff;
+    border-color:#dd4b39;
+}
+ul.social-agileinfo li a i.fa:hover {
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    -moz-animation: spin 2s linear infinite;
+    -o-animation: spin 2s linear infinite;
+    -ms-animation: spin 2s linear infinite;
 }
 
-.box-container {
-    display: flex; 
-    justify-content: space-between;
-    flex-wrap: wrap; 
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
 }
 
-.box {
-    flex: 1; 
-    margin: 0 70px; 
-    max-width: 300px; 
-}
-
-.box h3 {
-    font-size: 18px; 
-    margin-bottom: 10px; 
-    color: #F7462E;
-}
-
-.box a {
-    display: block; 
-    margin-bottom: 8px; 
-    text-decoration: none;
-    color: #333; 
-    font-size: 14px;
-}
-
-.box a:hover {
-    text-decoration: underline; 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 
-.box img{
-    width: 120%;
-    height: auto;
-    margin-left: -10px;
+/*-- responsive design --*/
+@media (max-width:1600px) {
+    h2.agileits1 {
+        padding: 225px 0 15px;	
+    }
 }
+
+@media (max-width: 1366px) {
+    h2.agileits1 {
+        padding: 235px 0 15px;
+    }
+}
+
+@media (max-width: 1080px) {
+    /*-- agileits --*/
+    h1.w3ls {
+        font-size: 40px;
+    }
+    .content-w3ls {
+        width:80%;
+        margin: 0 auto 40px;
+    }
+    p.agileits2 {
+        font-size: 14px;
+    }
+    p.copyright {
+        font-size: 14px;
+    }
+    p.wthree {
+        font-size: 14px;
+    }
+    input#UserID, input#email, input#password, input#password2 {
+        font-size:15px;
+    }
+}
+
+@media (max-width: 1024px) {
+    h1.w3ls {
+        padding: 30px 0;
+        font-size:35px;
+    }
+}
+
+@media (max-width: 991px) {
+    h2.agileits1 {
+        padding: 230px 0 15px;
+    }
+    .content-w3ls {
+        width: 90%;
+    }
+}
+
+@media (max-width: 800px) {
+    input#UserID, input#email, input#password, input#password2 {
+        width: 260px;
+    }
+    input.register {
+        width: 295px;
+    }
+    p.agileits2 {
+        font-size: 14px;
+        line-height: 30px;
+        padding: 0 10px;
+    }
+    /*-- agileits --*/
+}
+
+@media (max-width: 768px) {
+    h2.agileits1 {
+        padding: 210px 0 15px;
+    }
+}
+
+@media (max-width: 736px) {
+    .content-w3ls .content-agile1 {
+        width: 100%;
+        height:250px;
+    }
+    h2.agileits1 {
+        padding: 75px 0 15px;
+    }
+    .content-w3ls .content-agile2 {
+        width: 100%;
+        padding: 25px 0 30px;
+    }
+    .content-w3ls {
+        width: 65%;
+    }
+}
+
+@media (max-width: 600px) {
+    h2.agileits1 {
+        padding: 65px 0 10px;
+    }
+}
+
+@media (max-width: 568px) {
+    .content-w3ls {
+        width: 70%;
+    }
+}
+
+@media (max-width: 480px) {
+    h2.agileits1 {
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 414px) {
+    h1.w3ls {
+        padding: 25px 0;
+        font-size: 30px;
+    }
+    .content-w3ls {
+        /*-- agileinfo --*/
+        width: 85%;
+        margin: 0 auto 10px;
+    }
+}
+
+@media (max-width: 384px) {
+    input#UserID, input#email, input#password, input#password2 {
+        width: 230px;
+        height: 40px;
+    }
+    input.register {
+        width: 260px;
+        height:45px;
+    }
+    p.wthree {
+        font-size: 14px;
+        padding: 0 15px 20px;
+        line-height: 30px;
+    }
+}
+
+@media (max-width: 375px) {
+    h1.w3ls {
+        padding: 25px 0;
+        font-size: 27px;
+    }
+    h2.agileits1 {
+        font-size: 25px;
+        padding: 43px 0 10px;
+    }
+    .content-w3ls .content-agile1 {
+        width: 100%;
+        height: 200px;
+    }
+}
+
+@media (max-width: 320px) {
+    h1.w3ls {
+        padding: 25px 0;
+        font-size: 24px;
+    }
+    .content-w3ls .content-agile1 {
+        width: 100%;
+        height: 180px;
+    }
+    h2.agileits1 {
+        font-size: 22px;
+        padding: 37px 0 10px;
+    }
+    /*-- agileinfo --*/
+    p.agileits2 {
+        font-size: 13px;
+    }
+    input#UserID, input#email, input#password, input#password2 {
+        width: 195px;
+        height: 40px;
+        font-size: 14px;
+    }
+    .content-w3ls {
+        width: 90%;
+        margin: 0 auto;
+    }
+    input.register {
+        width: 230px;
+        height: 40px;
+        font-size:15px;
+    }
+    p.wthree {
+        font-size: 13px;
+        padding: 0 15px 15px;
+    }
+    p.copyright {
+        font-size: 13px;
+    }
+}
+
+
+
+
+
+
+/*-- /responsive design --*/
