--- a/web/static/css/orderRequest.css
+++ b/web/static/css/orderRequest.css
@@ -46,6 +46,7 @@
 .titlemat h5{
     font-weight: bold;
     padding-top: 20px;
+    padding-bottom: 10px; 
 
 }
 /* CHỌN NGUYÊN LIỆU */
@@ -76,15 +77,17 @@
 /* button-addmate */
 .button-addmate{
     text-align: center;
-    padding: 10px;
+    padding: 15px;
 }
 .button-addmate button{
+    width: 35%;
     border-radius: 20px;
     padding: 10px;
 }
 
 .mat-tab-title h5{
     font-weight: bold;
+    padding-bottom: 10px; 
 }
 .mat-tab thead{
     background-color: #f5f5f5
@@ -96,14 +99,14 @@
 .checkout{
     padding-top: 10px;
 }
-.checkout p{
-    font-weight: bold;
-    color: black;
 
+.checkout p{
+    color: black;
 }
 
-.checkout span{
-    font-weight: normal;
+
+.money{
+    font-weight: bold;
 }
 .sendrequest {
     text-align: center; 
