--- a/web/static/css/detail.css
+++ b/web/static/css/detail.css
@@ -117,11 +117,15 @@ background:#eee;
 }
 
 .pro-img-details {
-    margin-left: -15px;
+   
 }
 
 .pro-img-details img {
-    width: 95%;
+    width: 100%;
+    max-height: 700px;
+    border-radius: 8px;
+    overflow: hidden;
+    object-fit: cover;
 }
 .detail_cage{
     padding-left: 50px;
@@ -142,10 +146,16 @@ background:#eee;
     color:#fc5959 ;
 }
 
-.pro-price, .amount-old {
-    font-size: 18px;
+.pro-price {
+    font-size: 32px;
     padding: 0 10px;
 }
+
+.amount-old {
+    font-size: 24px;
+    padding: 0 10px;
+}
+
 
 .amount-old {
     text-decoration: line-through;
@@ -182,7 +192,7 @@ background:#eee;
     max-width: 110%;  
     background-color: #f7f7f7;
     padding: 20px;
-    margin: 20px;
+    margin: 24px 0 ;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -217,3 +227,54 @@ background:#eee;
 }
 */
 
+
+.pro-detail {
+    margin-left: 48px;
+}
+
+
+.action-btn {
+    width: 200px;
+}
+
+ /* Style for the feedback section */
+ .feedback-section {
+    border-radius: 6px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+
+.feedback-item {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px 0;
+
+
+}
+
+.feedback-header{ 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+
+.star-rating {
+    font-size: 24px;
+}
+
+.star-rating span {
+    color: #ffcc00;
+}
+
+
+
+.feedback-content {
+    margin-top: 10px;
+}
