--- a/web/static/css/viewCart.css
+++ b/web/static/css/viewCart.css
@@ -1,6 +1,9 @@
 select.form-control:not([size]):not([multiple]) {
     height: 44px;
 }
+.mainCard{
+    padding-top: 200px;
+}
 select.form-control {
     padding-right: 38px;
     background-position: center right 17px;
